First serve for the pending translation.
Translation of the first six slides of the curriculum slide set.

--- a/README
+++ b/README
@@ -1,3 +1,29 @@
+About:
+Ongoing - currently inofficial - German Translation of the OpenChain curriculum
+
+PLEASE NOTE THAT - DURING THE TRANSLATION PHASE - CONTENT MAY BE MISLEADING AND/OR INCORRECT!
+
+For the official OpenChain curriculum, please refer to
+https://github.com/OpenChain-Project/curriculum  
+
+==============================================================================
+translated README:
+Curriculum des OpenChain Project
+
+Der OpenChain Curriculum Foliensatz stellt Referenzmaterial zur Verfügung,
+welches Unternehmen dabei unterstützen soll, ein OpenChain-konformes
+Compliance-Trainingsprogramm aufzusetzen - oder ein bestehendes Trainigsprogramm
+auf OpenChain-Konformität auszubauen.
+
+---
+
+Innerhalb des rechtlich möglichen Rahmens haben diejenigen Menschen,
+die das Curriculum unter CC-0 bereitgestellt haben,
+auf alle Urheber- und verwandten oder verwandten Schutzrechte am Curriculum 
+verzichtet.
+
+==============================================================================
+original README:
 
 Curriculum by OpenChain Project
 
