slight corrections to README

--- a/README
+++ b/README
@@ -19,7 +19,7 @@ auf OpenChain-Konformität auszubauen.
 
 Innerhalb des rechtlich möglichen Rahmens haben diejenigen Menschen,
 die das Curriculum unter CC-0 bereitgestellt haben,
-auf alle Urheber- und verwandten oder verwandten Schutzrechte am Curriculum 
+auf alle Urheber- und anderen Schutzrechte am Curriculum 
 verzichtet.
 
 ==============================================================================
