translated two guide documents

--- a/README
+++ b/README
@@ -8,12 +8,13 @@ For the official OpenChain curriculum, please refer to
 https://github.com/OpenChain-Project/curriculum  
 ==============================================================================
 
-Status as of 2018/01/01
+Status as of 2018/01/03
 ~~~~~~~~~~~~~~~~~~~~~~~
 Finished initial translation of
 * Curriculum slides (folder /slides)
 * Checklists (folder /checklists)
 * Flowcharts (folder /flowcharts)
+* two guide documents (compliance_practices.docx and engineer_practices.docx within folder /guides)
 
 ==============================================================================
 translated README:
